--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <nav>
+    <ul class="navbar">
+        <li class="navbar-1">À propos</li>
+        <li class="navbar-2">Accueil</li>
+        <li class="navbar-3">Contact</li>
+    </ul>
+    </nav>
     <p>Initial test</p>
 </body>
 </html>
