Finition de la navbar et revue des catégories

--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <nav>
     <ul class="navbar">
-        <li class="navbar-1">À propos</li>
-        <li class="navbar-2">Accueil</li>
-        <li class="navbar-3">Contact</li>
+        <a href="#titre"><li class="navbar-1">À propos de moi</li></a>
+        <a href="#titre"><li class="navbar-2">Compétences</li></a>
+        <a href="#titre"><li class="navbar-3">Certificats</li></a>
+        <a href="#titre"><li class="navbar-4">Réalisations</li></a>
+        <a href="#titre"><li class="navbar-5">Contact</li></a>
     </ul>
     </nav>
-    <p>Initial test</p>
+    <h2 id="titre" class="titre">Présentation Clément</h2>
+    <div>
+        <h2>À propos de moi</h2>
+    </div>
 </body>
 </html>
