Restructuration du site et début de la section compétences

--- a/index.html
+++ b/index.html
@@ -8,16 +8,59 @@
 <body>
     <nav>
     <ul class="navbar">
-        <a href="#titre"><li class="navbar-1">À propos de moi</li></a>
-        <a href="#titre"><li class="navbar-2">Compétences</li></a>
-        <a href="#titre"><li class="navbar-3">Certificats</li></a>
-        <a href="#titre"><li class="navbar-4">Réalisations</li></a>
-        <a href="#titre"><li class="navbar-5">Contact</li></a>
+        <a href="#présentation"><li class="navbar-1">À propos de moi</li></a>
+        <a href="#compétences"><li class="navbar-2">Mes compétences</li></a>
+        <a href="#réalisations"><li class="navbar-3">Mes réalisations</li></a>
+        <a href="#contact"><li class="navbar-4">Me contacter</li></a>
     </ul>
     </nav>
     <h2 id="titre" class="titre">Présentation Clément</h2>
     <div>
-        <h2>À propos de moi</h2>
+        <h2 id="présentation" class="présentation">À propos de moi</h2>
+    </div>
+
+   <section id="compétences">
+    <h2 id="compétences">Mes compétences</h2>
+ <div class="skill-row">
+  <span class="nom-skill">Gestion de Projet :</span>
+  <div class="conteneur">
+    <div class="bar" style="width: 80%"></div>
+    <span class="label">80%</span>
+  </div>
+</div>
+     <div class="skill-row">
+  <span class="sous-nom-skill">Méthodologies :</span>
+  <div class="sous-conteneur">
+    <div class="bar" style="width: 80%"></div>
+    <span class="label">80%</span>
+  </div>
+</div>
+<div class="sous-contenue">
+    <ul>
+        <li>Agile✅</li>
+        <li>Scrum✅</li>
+        <li>Kanban✅</li>
+    </ul>
+</div>
+  <div class="skill">
+    <label>HTML / CSS</label>
+    <progress value="80" max="100"></progress>
+  </div>
+  <div class="skill">
+    <label>JavaScript</label>
+    <progress value="40" max="100"></progress>
+  </div>
+  <div class="skill">
+    <label>RH & recrutement</label>
+    <progress value="70" max="100"></progress>
+  </div>
+</section>
+
+    <div>
+        <h2 id="réalisations" class="réalisations">Mes réalisations</h2>
+    </div>
+    <div>
+        <h2 id="contact" class="contact">Me contacter</h2>
     </div>
 </body>
 </html>
