--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -19,20 +19,20 @@
         <h2 id="présentation" class="présentation">À propos de moi</h2>
     </div>
 
-   <section id="compétences">
-    <h2 id="compétences">Mes compétences</h2>
+<section id="compétences">
+  <h2 id="compétences">Mes compétences</h2>
  <div class="skill-row">
   <span class="nom-skill">Gestion de Projet :</span>
   <div class="conteneur">
-    <div class="bar" style="width: 80%"></div>
-    <span class="label">80%</span>
+    <div class="bar" style="width: 100%"></div>
+    <span class="label">100%</span>
   </div>
 </div>
      <div class="skill-row">
   <span class="sous-nom-skill">Méthodologies :</span>
   <div class="sous-conteneur">
-    <div class="bar" style="width: 80%"></div>
-    <span class="label">80%</span>
+    <div class="bar" style="width: 100%"></div>
+    <span class="label">100%</span>
   </div>
 </div>
 <div class="sous-contenue">
@@ -40,20 +40,85 @@
         <li>Agile✅</li>
         <li>Scrum✅</li>
         <li>Kanban✅</li>
+        <li>ScrumBan✅</li>
     </ul>
 </div>
-  <div class="skill">
-    <label>HTML / CSS</label>
-    <progress value="80" max="100"></progress>
+
+ <div class="skill-row">
+  <span class="nom-skill">Langages informatique :</span>
+  <div class="conteneur">
+    <div class="bar" style="width: 50%"></div>
+    <span class="label">50%</span>
   </div>
-  <div class="skill">
-    <label>JavaScript</label>
-    <progress value="40" max="100"></progress>
+</div>
+
+<div class="skill-row">
+  <span class="sous-nom-skill">HTML :</span>
+  <div class="sous-conteneur">
+    <div class="bar" style="width: 100%"></div>
+    <span class="label">100%</span>
   </div>
-  <div class="skill">
-    <label>RH & recrutement</label>
-    <progress value="70" max="100"></progress>
+</div>
+
+<div class="skill-row">
+  <span class="sous-nom-skill">CSS :</span>
+  <div class="sous-conteneur">
+    <div class="bar" style="width: 100%"></div>
+    <span class="label">100%</span>
   </div>
+</div>
+
+<div class="skill-row">
+  <span class="sous-nom-skill">Tailwind CSS :</span>
+  <div class="sous-conteneur">
+    <div class="bar" style="width: 10%"></div>
+    <span class="label">10%</span>
+  </div>
+</div>
+
+<div class="skill-row">
+  <span class="sous-nom-skill">JavaScript :</span>
+  <div class="sous-conteneur">
+    <div class="bar" style="width: 80%"></div>
+    <span class="label">80%</span>
+  </div>
+</div>
+
+<div class="skill-row">
+  <span class="sous-nom-skill">React :</span>
+  <div class="sous-conteneur">
+    <div class="bar" style="width: 20%"></div>
+    <span class="label">20%</span>
+  </div>
+</div>
+
+<div class="skill-row">
+  <span class="sous-nom-skill">Python :</span>
+  <div class="sous-conteneur">
+    <div class="bar" style="width: 50%"></div>
+    <span class="label">50%</span>
+  </div>
+</div>
+
+<div class="skill-row">
+  <span class="sous-nom-skill">RH :</span>
+  <div class="sous-conteneur">
+    <div class="bar" style="width: 40%"></div>
+    <span class="label">40%</span>
+  </div>
+</div>
+
+ <div class="skill-row">
+  <span class="nom-skill">Modélisation 3D Low poly :</span>
+  <div class="conteneur">
+    <div class="bar" style="width: 70%"></div>
+    <span class="label">70%</span>
+  </div>
+</div>
+
+<div>
+  <p>Je maitrise également l'anglais niveau B2+ et l'espagnol niveau A2+</p>
+</div>
 </section>
 
     <div>
